--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
       {
         q: "國文段考成績出爐，繞教室一圈發現只有自己不及格，你會......？",
         options: [
-          { text: "A. 情感的真實與深度", roles: ["賈寶玉"] },
-          { text: "B. 穩定與安全的生活", roles: ["李紈"] },
-          { text: "C. 自由與自己決定的空間", roles: ["妙玉"] },
-          { text: "D. 傳統與規矩的維持", roles: ["襲人"] }
+          { text: "A. 開始爆哭，和其他人抱怨自己情況", roles: ["賈寶玉"] },
+          { text: "B. 假裝自然，不給別人知道自己的分數，其實心裡很難過", roles: ["薛寶釵"] },
+          { text: "C. 默默emo，希望有人主動來關心間", roles: ["林黛玉"] },
+          { text: "D. 不太在乎他人看法，默默聽大家爭取分數", roles: ["惜春"] }
         ]
       },
       {
